# Rag-Project

./: .gitignore  main.py  pyproject.toml  requirements.txt
documents_loader/: data.txt  page.py  pdf.py  test.py
